# FinDocBot

./: .env.example  .gitignore  .pre-commit-config.yaml  DECISIONS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/rules/: _LEVELS.md  ai-engineering.md  backend-fastapi.md  clean-architecture.md  data-engineering.md  documentation.md  postgresql-pgvector.md  python-core.md  testing.md  workflow-scaffolding.md
.github/workflows/: ci.yml
docs/: manual-testing.md  optimizations.md  runbook.md
migrations/: 001_init.sql  002_hnsw_index.sql
src/findocbot/: __init__.py  config.py  main.py
src/findocbot/adapters/api/: __init__.py  routes.py  schemas.py
src/findocbot/domain/: __init__.py  entities.py  exceptions.py
src/findocbot/infrastructure/: cached_embedding_gateway.py  chunking.py  container.py  db.py  in_memory.py  ollama_gateway.py  pdf_parser.py  postgres_repositories.py
src/findocbot/use_cases/: __init__.py  answer_question.py  dto.py  ports.py  search_similar_chunks.py  upload_pdf.py
tests/: conftest.py  test_answer_generation.py  test_api_error_mapping.py  test_chunking.py  test_embedding_cache.py  test_in_memory.py  test_ollama_gateway.py  test_pdf_parser.py  test_postgres_repositories.py  test_rag_evaluation.py  test_retrieval_flow.py  test_smoke.py  test_use_case_errors.py
