[project]
name = "findocbot"
version = "0.1.0"
description = "RAG API over financial PDFs using Ollama and pgvector."
authors = [
    {name = "I. Tkachenko", email = "i.tkachenko@zohomail.eu"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.116.0",
    "fpdf2>=2.8.4",
    "httpx>=0.28.1",
    "pydantic>=2.11.0",
    "pypdf>=5.9.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=1.1.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
    "pre-commit>=4.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "pre-commit>=4.2.0",
]

[project.scripts]
findocbot = "findocbot.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
