[project]
name = "findocbot"
version = "0.1.0"
description = "RAG API over financial PDFs using Ollama and pgvector."
authors = [
    {name = "I. Tkachenko", email = "i.tkachenko@zohomail.eu"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.13.1",
    "pypdf>=5.9.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "mypy>=1.16",
    "pre-commit>=4.2.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=1.1.0",
    "fpdf2>=2.8.4",
    "respx>=0.22",
    "testcontainers[postgres]>=4.13",
    "pytest-cov>=7.1.0",
]

[tool.coverage.run]
source = ["src/findocbot"]
branch = true

[tool.coverage.report]
omit = ["*/__init__.py"]
show_missing = true
exclude_also = ["if TYPE_CHECKING:"]

[project.scripts]
findocbot = "findocbot.main:run"

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["src/findocbot"]

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "asyncpg",
]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
